! -> Note

01-Sept-2012 Jean-Marie Simonet
 # [#29034] img border is deprecated in html4, obsolete in html5.Thanks Chris
 # [#29027] Add language data to Smart Search indexing's tokenize process. Thanks Michael.
 # [#28756] Enable Search Term Logging in Smart Search. Thanks Michael.
 # [#27933] Smart Search module does not read static filter setting from module parameters. Thanks Chris

30-Aug-2012 Rouven Weßling
 ^ Move JEditor to the CMS libraries.
 # [#29010] Fix E_NOTICE in JFormFieldMedia

29-Aug-2012 Jean-Marie Simonet
 # [#28980] Publication information should not have h2 styling. Thanks Elin
 + [#28975] Add background color selector to protostar. Thanks Elin
 # [#29014] *Firefox 14.0.1: Insert Image, Article or Pagebreak always inserts on top
 # [#29004] *regression: protostar does not include the necessary css when inserting image in article

28-Aug-2012 Rouven Weßling
 ^ Reduce use of the deprecated JFile methods.
 ^ Reduce use of the deprecated JRequest class.
 ^ Reduce the amount of access to $_SERVER.

27-Aug-2012 Jean-Marie Simonet
 # [#28376] Remove unnecessary files from com_media frontend. Thanks Michael
 # [#28858] Com_finder missing show_advanced_tips parameter => can't hide advanced tips. Thanks Michael

26-Aug-2012 Jean-Marie Simonet
 # [#28950] Code quality for mod_stats_admin, translated DB drivers. Thanks Michael
 # [#28962] Added colors to main icons in admin isis. Thanks Peter.
 # [#28984] HRs in default layouts will change people's sites and are not semantic. Thanks Elin
 # [#28853] Template fails to copy. Thanks Mark
 # [#28672] Fix PHP Strict errors with Smart Search auto-completion. Thanks Michael.
 # [#28985] JFile class not loaded when use cache handler != file. Thanks Julio.
 ^ xml version changes to 3.0

24-Aug-2012 Jean-Marie Simonet
 # [#28968] Missing JFolder class imports in CMS. Thanks Mark
 # [#28797] Code Cleanup - Smart Search. Thanks Michael